# cpp-vektor-gcs

./: .gitignore  CMakeLists.txt  TODO.md  run.sh  run_client.sh  run_server.sh
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu.yml
Client/: CMakeLists.txt
Client/src/: main.cpp
Client/src/GUI/: ImGuiEngine.cpp  ImGuiEngine.hpp  ImGuiUtils.hpp  RecieverTestGUI.cpp  SettingsGUI.cpp
Common/: Constants.hpp  Package.hpp  Packet.hpp  UDPConnection.cpp  UDPConnection.hpp  UDPSocketConfig.hpp
Common/Protocol/: Helpers.hpp
Server/: CMakeLists.txt
Server/src/: main.cpp
client/: CMakeLists.txt
client/src/: Constants.hpp  SocketListener.cpp  SocketListener.hpp  main.cpp
client/src/GUI/: ImGuiEngine.cpp  ImGuiEngine.hpp  MessageInfoGUI.cpp  SettingsGUI.hpp  TransmitterTestGUI.hpp
server/: CMakeLists.txt
server/src/: main.cpp
src/: Constants.hpp  Globals.hpp  main.cpp
src/GUI/: ImGuiEngine.cpp  ImGuiEngine.hpp  ImGuiPanel.cpp  ImGuiPanel.hpp  ImGuiUtils.hpp  MainPanelGUI.cpp  MainPanelGUI.hpp  MessageInfoGUI.cpp  MessageInfoGUI.hpp  RecieverTestGUI.hpp  TransmitterTestGUI.cpp
